--- a/src/Smartstore.Modules/Smartstore.DevTools/wwwroot/_core.scss
+++ b/src/Smartstore.Modules/Smartstore.DevTools/wwwroot/_core.scss
@@ -9,24 +9,21 @@
     margin-block: 3px;
     text-align: start;
     box-shadow: none !important;
-    transition: 1s 0s border-color;
+    transition: 1s;
 
     @keyframes pulse-highlight {
-        0% {
+        0%, 100% {
             background-color: var(--badge-bg);
+            border-color: var(--warning) !important;
         }
 
         50% {
             background-color: var(--warning);
-        }
-
-        100% {
-            background-color: var(--badge-bg);
+            border-color: var(--warning) !important;
         }
     }
 
     &.wz-highlight {
-        border-color: var(--warning) !important;
         animation: pulse-highlight 0.4s ease-in-out 3;
         // Overwrite .d-none
         display: flex !important;
@@ -44,7 +41,7 @@
     }
 
     .wz-zone-pointer-container {
-        &:hover, &:active {
+        &:hover, &.active {
             background-color: rgba(255, 255, 255, 0.1);
         }
 
@@ -75,11 +72,13 @@
             &:not(.disabled):hover {
                 text-decoration: none;
                 background-color: rgba(255, 255, 255, 0.15);
-                color: var(--white) !important;
+                //color: var(--white) !important;
+                color: lighten(red, 30%) !important;
             }
 
             &[data-persistent] {
                 color: var(--red) !important;
+                transition: 0.2s;
 
                 > svg {
                     filter: drop-shadow(0 0 2px var(--red));
@@ -94,8 +93,12 @@
                 }
             }
 
-            &:not([data-persistent]).disabled > svg {
-                opacity: 0.3;
+            &.disabled {
+                pointer-events: none;
+
+                > svg {
+                    opacity: 0.3;
+                }
             }
         }
 
@@ -106,10 +109,6 @@
             height: 60%;
             background-color: var(--gray-650);
             transition: 0.1s;
-        }
-
-        &:hover .tool-divider {
-            opacity: 0;
         }
     }
 }
