Fixed rendering issue in import profile column mapping

--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -1482,7 +1482,8 @@ a.editable {
     flex-wrap: nowrap;
 }
 
-.mapping-edit .mapping-list-item {
+.mapping-edit .mapping-list-item,
+.column-mapping-new .mapping-list-item {
     display: contents;
 }
 
