Minor CSS change

--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -33,12 +33,12 @@
                         <bootstrap-icon name="eye" class="wz-visible bi-fw" attr-class='(isVisible, "d-none")' />
                         <bootstrap-icon name="eye-slash" class="wz-invisible bi-fw" attr-class='(!isVisible, "d-none")' />
                     </a>
-                    <span class="tool-divider"></span>
+                    <span class="vr"></span>
                     <a class="wz-tool wz-toggle p-3 flex-grow-1 d-flex align-items-center justify-content-center text-decoration-none@(wzToolClass)" data-persistent="true"
                         href="#" rel="nofollow" title="" data-toggle="tooltip" data-placement="top" data-original-title="@T("Plugins.Developer.DevTools.WidgetZoneMenu.PersistentToggle")">
                         <bootstrap-icon name="power" class="bi-fw" />
                     </a>
-                    <span class="tool-divider"></span>
+                    <span class="vr"></span>
                     <a class="wz-tool wz-sidebar-close p-3 flex-grow-1 d-flex align-items-center justify-content-center text-decoration-none"
                         href="#" rel="nofollow" title="" data-toggle="tooltip" data-placement="top" data-original-title="@T("Plugins.Developer.DevTools.WidgetZoneMenu.CloseButton")">
                         <bootstrap-icon name="x-lg" class="bi-fw" />
