--- a/src/Smartstore.Modules/Smartstore.DevTools/wwwroot/_core.scss
+++ b/src/Smartstore.Modules/Smartstore.DevTools/wwwroot/_core.scss
@@ -24,91 +24,116 @@
     }
 
     &.wz-highlight {
-        animation: pulse-highlight 0.4s ease-in-out 3;
+        animation: pulse-highlight 0.4s ease-in-out 6;
         // Overwrite .d-none
         display: flex !important;
         z-index: 999;
     }
 }
 
+#wz-menu-toggle {
+    position: fixed;
+    top: 35%;
+    inset-inline-end: 0;
+    margin: 0.5rem;
+}
+
 #wz-menu {
     .wz-zone-list {
-        filter: grayscale(1);
-    }
+        flex-grow: 1;
+        padding: 0 0 1rem 0;
+        overflow: scroll;
 
-    .wz-zone-group > * {
-        padding-left: 1rem;
-    }
+        .wz-zone-group {
+            display: flex;
+            flex-direction: column;
+            margin-top: 0.5rem;
 
-    .wz-zone-pointer-container {
-        &:hover, &.active {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
+            h6 {
+                margin-block: 0.5rem;
+            }
 
-        .wz-zone-pointer {
-            color: var(--primary-border-subtle);
-            font-size: 0.8rem;
-            transition: 0.3s;
-
-            &:hover {
-                color: var(--white);
+            > * {
+                padding-left: 1rem;
             }
         }
-    }
 
-    .copy-to-clipboard.text-secondary:hover {
-        color: var(--white) !important;
-    }
+        .wz-zone-pointer-container {
+            display: flex;
+            gap: 0.5rem;
+            padding-block: 0.25rem;
+            transition: 0.3s;
 
-    #wz-toolbar {
-        // INFO: Use indigo, when grayscale effect is used on #wz-menu.
-        /*background-color: var(--indigo);*/
-        background-color: var(--gray-700);
+            &:hover, &.active {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
 
-        .wz-tool {
-            color: var(--gray-300) !important;
-            font-size: 1.375rem;
-
-            &:not(.disabled):hover {
+            .wz-zone-pointer {
+                flex-grow: 1;
+                color: var(--primary-border-subtle);
+                font-size: 0.8rem;
                 text-decoration: none;
-                background-color: rgba(255, 255, 255, 0.15);
-                //color: var(--white) !important;
+
+                &:hover {
+                    color: var(--white);
+                }
+            }
+        }
+
+        .copy-to-clipboard.text-secondary:hover {
+            color: var(--white) !important;
+        }
+    }
+}
+
+#wz-toolbar {
+    display: flex;
+    align-items: stretch;
+    background-color: #00000040;
+
+    .wz-tool {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+        padding: 1rem;
+        color: var(--gray-300) !important;
+        font-size: 1.375rem;
+        text-decoration: none;
+
+
+        &:not(.disabled):hover {
+            text-decoration: none;
+            background-color: rgba(255, 255, 255, 0.15);
+            color: var(--white) !important;
+        }
+
+        &[data-persistent] {
+            color: var(--red) !important;
+
+            &:hover {
                 color: lighten(red, 30%) !important;
             }
 
-            &[data-persistent] {
-                color: var(--red) !important;
-                transition: 0.2s;
-
-                > svg {
-                    filter: drop-shadow(0 0 2px var(--red));
-                }
-            }
-
-            &.show-wz[data-persistent] {
-                color: var(--green) !important;
-
-                > svg {
-                    filter: drop-shadow(0 0 2px var(--green));
-                }
-            }
-
-            &.disabled {
-                pointer-events: none;
-
-                > svg {
-                    opacity: 0.3;
-                }
+            > svg {
+                filter: drop-shadow(0 0 2px var(--red));
             }
         }
 
-        .tool-divider {
-            position: relative;
-            top: 20%;
-            width: 1px;
-            height: 60%;
-            background-color: var(--gray-650);
-            transition: 0.1s;
+        &.show-wz[data-persistent] {
+            color: var(--green) !important;
+
+            > svg {
+                filter: drop-shadow(0 0 2px var(--green));
+            }
+        }
+
+        &.disabled {
+            pointer-events: none;
+
+            > svg {
+                opacity: 0.3;
+            }
         }
     }
 }
