--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -8,6 +8,7 @@
     // TODO: (mw) (dt) Power button should refresh the page: Detect the cookie state in the filter and show empty zone list with hint to power on, when off. -> Separate component for menu?
 
     // QUESTION: (mc) (dt) To optimize the performance, should we use the bootstrap icon's SVG-code directly instead of the bootstrap-icon tag helper?
+    //      RE: (MC) Yes, good idea!
 
     if (ViewData["widgetzone"] is not IWidgetZone zone)
     {
