New CSS class ".dispensable": For elements that should be hidden in popups or stories

--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -37,7 +37,7 @@
 <div id="page">
     <div class="canvas-blocker canvas-slidable"></div>
     <div class="page-main canvas-slidable">
-        <header id="header">
+        <header id="header" class="dispensable">
             <zone name="header" replace-content="true">
                 <zone name="admin_navbar_before" preview-class="position-absolute"></zone>
                 @await Component.InvokeAsync("AdminNavbar")
