--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -18,11 +18,11 @@
     if (zone.Name == "start")
     {
         // Add the offcanvas zone preview menu
-        <a id="wz-menu-toggle" class="d-none d-lg-block btn btn-dark" href="#" data-toggle="offcanvas"
+        <a id="wz-menu-toggle" class="d-none d-lg-block btn btn-dark dispensable" href="#" data-toggle="offcanvas"
            data-autohide="false" data-blocker="false" data-placement="end" data-fullscreen="false" data-slide="false" data-target="#wz-menu" title="@T("Plugins.Developer.DevTools.WidgetZoneMenu")">
             <i class="far fa-layer-group"></i>
         </a>
-        <aside id="wz-menu" class="d-none d-lg-block bg-dark offcanvas offcanvas-end offcanvas-shadow">
+        <aside id="wz-menu" class="d-none d-lg-block bg-dark offcanvas offcanvas-end offcanvas-shadow dispensable">
             <div class="offcanvas-content d-flex flex-column">
                 <div class="wz-zone-list custom-scrollbar custom-scrollbar-invert"></div>
 
