--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -91,6 +91,10 @@ body {
     &.popup {
         background-color: #fff;
     }
+
+    &.popup .dispensable {
+        display: none !important;
+    }
 }
 
 #page {
@@ -123,10 +127,6 @@ body {
     @include gradient-bg($indigo);
     grid-column: 1 / -1;
     grid-row: 1 / span 2;
-
-    .popup & {
-        display: none;
-    }
 }
 
 .sidebar-left {
