--- a/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
@@ -270,7 +270,10 @@
                         <smart-label asp-for="Intro" />
                     </div>
                     <div class="adminData wide">
-                        <ai-text asp-for="Intro" entity-name="@Model.Title" entity-type="Topic">
+                        <ai-text asp-for="Intro" 
+                                 entity-name="@Model.Title" 
+                                 entity-type="Topic"
+                                 char-limit="255">
                             <textarea asp-for="Intro" rows="1"></textarea>
                         </ai-text>
                         <span asp-validation-for="Intro"></span>
