--- a/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
@@ -432,7 +432,8 @@
                                  entity-name="@Model.Name"
                                  entity-type="Category"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="400">
                             <input asp-for="MetaTitle" />
                         </ai-text>
                         <span asp-validation-for="MetaTitle"></span>
@@ -447,7 +448,8 @@
                                  entity-name="@Model.Name"
                                  entity-type="Category"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="4000">
                             <textarea asp-for="MetaDescription"></textarea>
                         </ai-text>
                         <span asp-validation-for="MetaDescription"></span>
@@ -462,7 +464,8 @@
                                  entity-name="@Model.Name"
                                  entity-type="Category"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="400">
                             <input asp-for="MetaKeywords" />
                         </ai-text>
                         <span asp-validation-for="MetaKeywords"></span>
