--- a/src/Smartstore.Web/Areas/Admin/Views/Manufacturer/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Manufacturer/_CreateOrUpdate.cshtml
@@ -293,7 +293,8 @@
                                  entity-name="@Model.Name"
                                  entity-type="Manufacturer"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="400">
                             <input asp-for="MetaTitle" />
                         </ai-text>
 				        <span asp-validation-for="MetaTitle"></span>
@@ -308,7 +309,8 @@
                                  entity-name="@Model.Name"
                                  entity-type="Manufacturer"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="4000">
                             <textarea asp-for="MetaDescription"></textarea>
                         </ai-text>
 				        <span asp-validation-for="MetaDescription"></span>
@@ -323,7 +325,8 @@
                                  entity-name="@Model.Name"
                                  entity-type="Manufacturer"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="400">
                             <input asp-for="MetaKeywords" />
                         </ai-text>
 				        <span asp-validation-for="MetaKeywords"></span>
