--- a/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
@@ -355,7 +355,8 @@
                                  entity-name="@Model.Title"
                                  entity-type="Topic"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="400">
                             <input asp-for="MetaTitle" />
                         </ai-text>
                         <span asp-validation-for="MetaTitle"></span>
@@ -370,7 +371,8 @@
                                  entity-name="@Model.Title"
                                  entity-type="Topic"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="4000">
                             <textarea asp-for="MetaDescription"></textarea>
                         </ai-text>
                         <span asp-validation-for="MetaDescription"></span>
@@ -385,7 +387,8 @@
                                  entity-name="@Model.Title"
                                  entity-type="Topic"
                                  display-optimization-options="false"
-                                 display-word-limit="false">
+                                 display-word-limit="false"
+                                 char-limit="400">
                             <input asp-for="MetaKeywords" />
                         </ai-text>
                         <span asp-validation-for="MetaKeywords"></span>
