#1176 Avoid duplicate assignment of description on the product page

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
@@ -104,6 +104,15 @@
                 </div>
                 <div class="adminRow">
                     <div class="adminTitle">
+                        <smart-label asp-for="SeoSettings.ProductDescriptionPriority" />
+                    </div>
+                    <div class="adminData">
+                        <setting-editor asp-for="SeoSettings.ProductDescriptionPriority"></setting-editor>
+                        <span asp-validation-for="SeoSettings.ProductDescriptionPriority"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
                         <smart-label asp-for="SeoSettings.CanonicalUrlsEnabled" />
                     </div>
                     <div class="adminData">
