Closes #1121 Add missing MetaDescription for catalog pages

--- a/src/Smartstore.Web/Views/Catalog/CompareProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/CompareProducts.cshtml
@@ -5,6 +5,7 @@
 
 @{
     Assets.AppendTitleParts(T("PageTitle.CompareProducts"));
+    Assets.AppendMetaDescriptionParts(T("PageDescription.CompareProducts", CommonServices.StoreContext.CurrentStore.Name));
 
     var specificationAttributes = new List<ProductSpecificationModel>();
     foreach (var product in Model.Items)
