--- a/src/Smartstore.Web/Views/Catalog/ProductTagsAll.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ProductTagsAll.cshtml
@@ -4,6 +4,7 @@
 
 @{
     Assets.AppendTitleParts(T("PageTitle.AllProductTags"));
+    Assets.AppendMetaDescriptionParts(T("PageDescription.AllProductTags", CommonServices.StoreContext.CurrentStore.Name));
 }
 
 <div class="page product-tags-all-page">
