--- a/src/Smartstore.Web/Views/Catalog/RecentlyAddedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/RecentlyAddedProducts.cshtml
@@ -4,6 +4,7 @@
 
 @{
     Assets.AppendTitleParts(T("PageTitle.RecentlyAddedProducts"));
+    Assets.AppendMetaDescriptionParts(T("PageDescription.RecentlyAddedProducts", CommonServices.StoreContext.CurrentStore.Name));
 }
 
 <div class="page recently-added-products-page">
