--- a/src/Smartstore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
@@ -4,6 +4,7 @@
 
 @{
     Assets.AppendTitleParts(T("PageTitle.RecentlyViewedProducts"));
+    Assets.AppendMetaDescriptionParts(T("PageDescription.RecentlyViewedProducts", CommonServices.StoreContext.CurrentStore.Name));
 }
 
 <div class="page recently-viewed-products-page">
