--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Search.cshtml
@@ -74,7 +74,7 @@
                     </div>
                     <div class="adminData">
                         <setting-editor asp-for="DefaultSortOrder">
-                            <select asp-for="DefaultSortOrder" asp-items="Html.GetLocalizedEnumSelectList(typeof(ProductSortingEnum))"></select>
+                            <select asp-for="DefaultSortOrder" asp-items="ViewBag.AvailableProductSortings"></select>
                         </setting-editor>
                         <span asp-validation-for="DefaultSortOrder"></span>
                     </div>
