Search: added a setting to label products as "new" by the availability start date

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Catalog.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Catalog.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Smartstore.Core.Catalog
-@using Smartstore.Core.Catalog.Products 
+@using Smartstore.Core.Catalog.Products
 @using Smartstore.Core.Catalog.Pricing
-  
+
 @model CatalogSettingsModel
 
 @{
@@ -466,6 +466,15 @@
                         <span asp-validation-for="LabelAsNewForMaxDays"></span>
                     </div>
                 </div>
+                <div id="pnlLabelAsNewByAvailableDate" class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="LabelAsNewByAvailableDate" />
+                    </div>
+                    <div class="adminData">
+                        <setting-editor asp-for="LabelAsNewByAvailableDate"></setting-editor>
+                        <span asp-validation-for="LabelAsNewByAvailableDate"></span>
+                    </div>
+                </div>
             </div>
 
             <div class="adminContent">
@@ -825,3 +834,14 @@
         </tab>
     </tabstrip>
 </form>
+
+<script sm-target-zone="Scripts" data-origin="catalog-settings">
+    $(function () {
+
+        $('#@Html.IdFor(x => x.LabelAsNewForMaxDays)').change(function () {
+            $('#pnlLabelAsNewByAvailableDate').toggle(!_.isEmpty($(this).val()));
+        })
+        .trigger('change');
+
+    });
+</script>
